bug fixed s6000,s7000,s8000 - body-overflow-hidden added

--- a/src/assets/scss/base/_layout.scss
+++ b/src/assets/scss/base/_layout.scss
@@ -4,6 +4,10 @@ html, body, h1, h2, h3, h4, h5, h6, p, span, button, input, form, header, footer
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden !important;
+}
+
 
 
 .cont-site {
@@ -360,5 +364,5 @@ h4 {                          //list header small
 
 
 
-    
+
 }
